--- a/src/App.css
+++ b/src/App.css
@@ -5,11 +5,17 @@
   --mainDark: #232528;
   --mainYellow: #ffa400;
 }
+#root {
+  display: flex;
+  flex-direction: column;
+  min-height: 100vh;
+}
 
 body {
   font-family: "Oswald", sans-serif !important;
   background: var(--mainWhite) !important;
   color: var(--mainDark) !important;
+
 }
 .text-title {
   font-family: "Permament Marker", cursive;
